LIKA-410: Fixed the disclaimer text in form actions (bottom of the page) being lower than the buttons and sometimes resulting in a vertical scrollbar

--- a/ckanext/ckanext-apicatalog_ui/less/dataset.less
+++ b/ckanext/ckanext-apicatalog_ui/less/dataset.less
@@ -414,3 +414,9 @@
 .field-private-block {
   display: none;
 }
+
+.form-actions {
+  .action-info {
+    margin: 0;
+  }
+}
